--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
             "io.rest-assured:rest-assured:$restAssuredVersion",
 //            "io.rest-assured:json-schema-validator:$restAssuredVersion",
 //            "io.qameta.allure:allure-rest-assured:$allureVersion",
-//            "org.assertj:assertj-core:3.24.2",
+            "org.assertj:assertj-core:3.24.2",
 //            "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.2",
             "org.slf4j:slf4j-simple:$slf4jVersion"
