--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
             "io.qameta.allure:allure-selenide:$allureVersion",
             "io.appium:java-client:8.4.0",
             "io.rest-assured:rest-assured:$restAssuredVersion",
+            "org.aeonbits.owner:owner:1.0.4",
 //            "io.rest-assured:json-schema-validator:$restAssuredVersion",
 //            "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.assertj:assertj-core:3.24.2",
@@ -44,11 +45,24 @@ dependencies {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task android(type: Test) {
+    useJUnitPlatform {
+        includeTags 'android'
+    }
+}
+
+task ios(type: Test) {
+    useJUnitPlatform {
+        includeTags 'ios'
     }
 }
